--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-slick": "^0.29.0",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0"
   },
