--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0"
   },
