--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.2",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "normalize.css": "^8.0.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
